CSS design system is responsive - feel free to adjust as needed

--- a/static/global.css
+++ b/static/global.css
@@ -1,4 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap");
+@font-face {
+  font-family: Archivo;
+  src: url(/font/Archivo-VariableFont_wdth\,wght.ttf);
+}
+
+@font-face {
+  font-family: Archivo Italic;
+  src: url(/font/Archivo-Italic-VariableFont_wdth\,wght.ttf);
+}
 
 * {
   box-sizing: border-box;
@@ -15,16 +23,84 @@
 }
 
 h1 {
-    font-size: 6em;
-    letter-spacing: -4px;
+  font-size: 6rem;
+  letter-spacing: -2px;
+  line-height: 6rem;
+  font-weight: 600;
 }
 
 h2 {
-    font-size: 4em;
-    letter-spacing: -4px;
+  font-size: 4rem;
+  letter-spacing: -2px;
+  line-height: 4rem;
+  font-weight: 600;
 }
 
 h3 {
-    font-size: 3em;
-    letter-spacing: -4px;
+  font-size: 3rem;
+  letter-spacing: -2px;
+  line-height: 3rem;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+h4 {
+  font-size: 2rem;
+  line-height: 2.5rem;
+  font-weight: normal;
+}
+
+h5 {
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  font-weight: 600;
+}
+
+h6 {
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  font-weight: normal;
+}
+
+p {
+  font-size: 1.12rem;
+  line-height: 2rem;
+}
+
+.subtext {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  letter-spacing: -0.25px;
+}
+
+@media (max-width: 35em) {
+  h1 {
+    font-size: 3rem;
+    line-height: 100%;
+  }
+
+  h2 {
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+  }
+
+  h3 {
+    font-size: 2rem;
+    line-height: 1.5rem;
+  }
+
+  h4 {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  h5 {
+    font-size: 1.12rem;
+    line-height: 2rem;
+  }
+
+  h6 {
+    font-size: 1.12rem;
+    line-height: 2rem;
+  }
 }
