--- a/static/global.css
+++ b/static/global.css
@@ -17,7 +17,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Archivo", sans-serif;
 }
 
 :root {
@@ -27,6 +26,10 @@
   --blue: #364bf7;
 
   --martian-mono: "Martian Mono", system-ui;
+}
+
+html {
+  font-family: "Archivo", sans-serif;
 }
 
 h1 {
