--- a/static/global.css
+++ b/static/global.css
@@ -1,16 +1,16 @@
 @font-face {
   font-family: Archivo;
-  src: url(/font/Archivo-VariableFont_wdth\,wght.ttf);
+  src: url(/font/Archivo-VariableFont_wdth\,wght.woff2);
 }
 
 @font-face {
   font-family: Archivo Italic;
-  src: url(/font/Archivo-Italic-VariableFont_wdth\,wght.ttf);
+  src: url(/font/Archivo-Italic-VariableFont_wdth\,wght.woff2);
 }
 
 @font-face {
   font-family: Martian Mono;
-  src: url(/font/MartianMono-VariableFont_wdth\,wght.ttf);
+  src: url(/font/MartianMono-VariableFont_wdth\,wght.woff2);
 }
 
 * {
