--- a/static/global.css
+++ b/static/global.css
@@ -36,6 +36,7 @@
 
 
 * {
+  /*todo uitzoekenw aarom border box de subscribe button text aanpaast*/
   box-sizing: border-box;
   margin: 0;
   padding: 0;
