FIx styling issues

--- a/static/global.css
+++ b/static/global.css
@@ -16,11 +16,16 @@
   src: url("/font/font2/martian-mono-v3-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
+@font-face {
+  font-family: Unique;
+  src: url(/font/Flux.woff2);
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Archivo", sans-serif;
+  /* font-family: "Archivo", sans-serif; */
 }
 
 :root {
@@ -47,7 +52,8 @@ h4,
 h5,
 h6,
 p,
-a, li,
+a,
+li,
 button {
   color: var(--black);
 }
@@ -56,49 +62,51 @@ svg path {
   stroke: var(--black);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Unique", sans-serif;
+  line-height: 1.5;
+}
+
+p {
+  font-family: "Unique", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 h1 {
-  font-size: 6rem;
-  letter-spacing: -2px;
-  line-height: 6rem;
-  font-weight: 600;
+  font-size: 5rem;
+  font-weight: 800;
+  font-variation-settings: "wdth" 600;
 }
 
 h2 {
   font-size: 4rem;
-  letter-spacing: -2px;
-  line-height: 4rem;
-  font-weight: 600;
 }
 
 h3 {
   font-size: 3rem;
-  letter-spacing: -2px;
-  line-height: 3rem;
-  font-weight: 600;
+
   text-transform: capitalize;
 }
 
 h4 {
   font-size: 2rem;
-  line-height: 2.5rem;
-  font-weight: normal;
 }
 
 h5 {
   font-size: 1.5rem;
-  line-height: 2.5rem;
-  font-weight: 600;
 }
 
 h6 {
   font-size: 1.5rem;
-  line-height: 2.5rem;
-  font-weight: normal;
 }
 
 p {
   font-size: 1.12rem;
-  line-height: 2rem;
 }
 
 a {
@@ -123,12 +131,12 @@ button:focus-visible {
 
 @media (max-width: 35em) {
   h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     line-height: 100%;
   }
 
   h2 {
-    font-size: 2.5rem;
+    font-size: 2.25rem;
     line-height: 2.5rem;
   }
 
