--- a/static/global.css
+++ b/static/global.css
@@ -16,12 +16,21 @@
   src: url('/font/font2/martian-mono-v3-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
+@font-face {
+  font-display: swap;
+  font-family: 'Bubblegum';
+  src: url('./font/SmothyBubble.otf');
+}
+
 * {
   /*todo uitzoekenw aarom border box de subscribe button text aanpaast*/
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: "Archivo", sans-serif;
+
+  /* This font when shows when the bubblegum pops */ 
+  /* font-family: "Bubblegum", sans-serif;  */
 }
 
 :root {
