--- a/static/global.css
+++ b/static/global.css
@@ -22,6 +22,8 @@
   margin: 0;
   padding: 0;
   font-family: "Archivo", sans-serif;
+  background-color: #183F20;
+  color: var(--white);
 }
 
 :root {
@@ -29,6 +31,7 @@
   --grey: #666666;
   --white: #fff;
   --blue: #364bf7;
+  --christmas-red: #DF4A39;
 
   --martian-mono: "Martian Mono", system-ui;
 }
@@ -38,6 +41,7 @@ h1 {
   letter-spacing: -2px;
   line-height: 6rem;
   font-weight: 600;
+  color: var(--christmas-red);
 }
 
 h2 {
@@ -138,7 +142,7 @@ header {
 main {
   line-height: 1.5;
   padding: 2rem;
-  border-bottom: 1px solid var(--black);
+  border-bottom: 1px solid var(--white);
 }
 
 @media (min-width: 43rem) {
@@ -152,13 +156,13 @@ main {
   header {
     margin: 1rem;
     margin-bottom: 0;
-    border: solid var(--black);
+    border: solid var(--white);
     border-width: 1px;
   }
 
   main {
     margin: 0 1rem;
-    border: solid var(--black);
+    border: solid var(--white);
     border-width: 0px 1px 1px 1px;
     border-top: none;
     padding: 1rem;
@@ -166,7 +170,7 @@ main {
 
   footer {
     margin: 0 1rem 1rem 1rem;
-    border: solid var(--black);
+    border: solid var(--white);
     border-width: 0px 1px 1px 1px;
   }
 }
