--- a/static/global.css
+++ b/static/global.css
@@ -35,7 +35,14 @@ body {
   background-color: var(--white);
 }
 
-h1, h2, h3, h4, h5, p, li, a {
+h1,
+h2,
+h3,
+h4,
+h5,
+p,
+li,
+a {
   color: var(--black);
 }
 
@@ -183,7 +190,7 @@ main {
   body {
     overflow-x: hidden;
   }
-  
+
   main {
     border-left: none;
     margin: 0.25rem;
