--- a/static/global.css
+++ b/static/global.css
@@ -25,7 +25,7 @@
 :root {
   --black: #1b1b23;
   --grey: #666666;
-  --white: #cdc9c9;
+  --white: #dbd5d5;
   --blue: #1b14a6;
 
   --martian-mono: "Martian Mono", system-ui;
