Feature : Color changes to xmas theme

--- a/static/global.css
+++ b/static/global.css
@@ -22,6 +22,8 @@
   margin: 0;
   padding: 0;
   font-family: "Archivo", sans-serif;
+  background-color: #192140;
+  color: var(--white);
 }
 
 :root {
@@ -131,13 +133,13 @@ button:focus-visible {
 }
 
 header {
-  border-bottom: 1px solid var(--black);
+  border-bottom: 1px solid var(--white);
 }
 
 main {
   line-height: 1.5;
   padding: 2rem;
-  border-bottom: 1px solid var(--black);
+  border-bottom: 1px solid var(--white);
 }
 
 @media (min-width: 43rem) {
@@ -151,13 +153,13 @@ main {
   header {
     margin: 1rem;
     margin-bottom: 0;
-    border: solid var(--black);
+    border: solid var(--white);
     border-width: 1px;
   }
 
   main {
     margin: 0 1rem;
-    border: solid var(--black);
+    border: solid var(--white);
     border-width: 0px 1px 1px 1px;
     border-top: none;
     padding: 1rem;
@@ -165,7 +167,7 @@ main {
 
   footer {
     margin: 0 1rem 1rem 1rem;
-    border: solid var(--black);
+    border: solid var(--white);
     border-width: 0px 1px 1px 1px;
   }
 }
