--- a/static/global.css
+++ b/static/global.css
@@ -33,8 +33,11 @@
   margin: 0;
   padding: 0;
   font-family: "Archivo", sans-serif;
-  background-color: #192140;
   color: var(--white);
+}
+
+body {
+  background-color: #192140;
 }
 
 :root {
@@ -44,6 +47,7 @@
   --blue: #364bf7;
 
   --martian-mono: "Martian Mono", system-ui;
+  --santaWidth: clamp(5rem, 200px, 10vw);
 }
 
 h1 {
@@ -205,4 +209,94 @@ main {
     margin: 0 0.25rem;
     justify-self: end;
   }
+
 }
+
+.sneeuwvlokken {
+  position: fixed;
+  left:0; right:0; top:0;
+  z-index:9999;
+}
+
+.sneeuwvlokken div {
+  position:fixed;
+  top:-10%;
+  color: #ffffff;
+  user-select:none;
+  opacity:1;
+  animation:
+    sneeuwvlok-neer 2s linear infinite,
+    sneeuwvlok-heen-en-weer 1.25s ease-in-out infinite;
+}
+
+/* #region Seperate snowflake animation */
+.sneeuwvlokken div:nth-of-type(1){left:2%; animation-delay:1.0s, 1.1s;}
+.sneeuwvlokken div:nth-of-type(2){left:7%; animation-delay:4.2s, .5s;}
+.sneeuwvlokken div:nth-of-type(3){left:12%; animation-delay:3.8s, 2.2s;}
+.sneeuwvlokken div:nth-of-type(4){left:17%; animation-delay:2.2s, 2.3s;}
+.sneeuwvlokken div:nth-of-type(5){left:22%; animation-delay:8.4s, 2.9s;}
+
+.sneeuwvlokken div:nth-of-type(6){left:27%; animation-delay:5.7s, 2.4s;}
+.sneeuwvlokken div:nth-of-type(7){left:32%; animation-delay:2.3s, 0.8s;}
+.sneeuwvlokken div:nth-of-type(8){left:37%; animation-delay:1.4s, 0.2s;}
+.sneeuwvlokken div:nth-of-type(9){left:42%; animation-delay:3.1s, 1.5s;}
+.sneeuwvlokken div:nth-of-type(10){left:47%; animation-delay:0s, 0s;}
+
+.sneeuwvlokken div:nth-of-type(11){left:52%; animation-delay:5s, 1.6s;}
+.sneeuwvlokken div:nth-of-type(12){left:57%; animation-delay:2.3s, 1.7s;}
+.sneeuwvlokken div:nth-of-type(13){left:62%; animation-delay:2.8s, .5s;}
+.sneeuwvlokken div:nth-of-type(14){left:67%; animation-delay:9.1s, 2.3s;}
+.sneeuwvlokken div:nth-of-type(15){left:72%; animation-delay:6.9s, 0.2s;}
+
+.sneeuwvlokken div:nth-of-type(16){left:77%; animation-delay:4.3s, .9s;}
+.sneeuwvlokken div:nth-of-type(17){left:82%; animation-delay:2.6s, .3s;}
+.sneeuwvlokken div:nth-of-type(18){left:87%; animation-delay:1.2s, 1.4s;}
+.sneeuwvlokken div:nth-of-type(19){left:92%; animation-delay:9.6s, 2.6s;}
+.sneeuwvlokken div:nth-of-type(20){left:97%; animation-delay:5.8s, 1.2s;}
+/* #endregion */
+
+.progress {
+  position: fixed;
+  bottom: calc(100vh - 100%);
+  left: 0;
+  width: calc(100% - var(--santaWidth));
+  height: 0.5rem;
+  background: rgb(0, 255, 247);
+  transform-origin: 0 50%;
+  animation: scaleProgress linear;
+  animation-timeline: scroll(root);
+}
+
+.santa {
+  position: fixed;
+  bottom: calc(100vh - 100%);
+  left: 0;
+  width: var(--santaWidth);
+  animation: slide linear;
+  animation-timeline: scroll(root);
+}
+
+/* #region Keyframe animations */ 
+
+@keyframes sneeuwvlok-neer {
+  0%{top:-10%}
+  100%{top:100%}
+}
+
+@keyframes sneeuwvlok-heen-en-weer {
+  0%{transform:translateX(0px)}
+  50%{transform:translateX(80px)}
+  100%{transform:translateX(0px)}
+}
+
+@keyframes slide {
+  from { transform: translateX(0); }
+  to { transform: translateX(calc(100vw - 100%)); }
+}
+
+@keyframes scaleProgress {
+  from { transform: scaleX(0); }
+  to { transform: scaleX(1); }
+}
+
+/* #endregion */
