--- a/static/global.css
+++ b/static/global.css
@@ -20,8 +20,8 @@
 :root {
   --black: #08310b;
   --grey: #666666;
-  --white: #ffd8de;
-  --blue: #c55c5c;
+  --white: #f7c0bf;
+  --blue: #d95050;
 }
 
 body {
