FIX header layout big screen, active state nav

--- a/static/global.css
+++ b/static/global.css
@@ -1,22 +1,27 @@
 @font-face {
   font-family: Archivo;
   src: url(/font/Archivo-VariableFont_wdth\,wght.woff2);
+  font-display: swap;
 }
 
 @font-face {
-  font-family: Archivo Italic;
-  src: url(/static/font/Archivo-Italic-VariableFont_wdth\,wght.woff2);
+  font-family: "Archivo";
+  font-display: swap;
+  src: url("/font/font2/archivo-v19-latin-regular.woff2") format("woff2");
 }
 
 @font-face {
-  font-family: Martian Mono;
-  src: url(/font/MartianMono-VariableFont_wdth\,wght.ttf);
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Martian Mono";
+  src: url("/font/font2/martian-mono-v3-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 * {
+  /*todo uitzoekenw aarom border box de subscribe button text aanpaast*/
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Archivo", sans-serif;
 }
 
 :root {
@@ -26,10 +31,6 @@
   --blue: #364bf7;
 
   --martian-mono: "Martian Mono", system-ui;
-}
-
-html {
-  font-family: "Archivo", sans-serif;
 }
 
 h1 {
@@ -77,14 +78,24 @@ p {
   line-height: 2rem;
 }
 
+a {
+  font-family: var(--martian-mono);
+  color: var(--blue);
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+a:focus-visible,
+button:focus-visible {
+  color: var(--blue);
+  font-weight: bolder;
+  border: 3px dashed var(--blue);
+}
+
 .subtext {
   font-size: 1rem;
   line-height: 1.5rem;
   letter-spacing: -0.25px;
-}
-
-a:focus-visible {
-  border: 3px dashed var(--blue);
 }
 
 @media (max-width: 35em) {
@@ -156,5 +167,23 @@ main {
     margin: 0 1rem 1rem 1rem;
     border: solid var(--black);
     border-width: 0px 1px 1px 1px;
+  }
+}
+
+@media (width > 50rem) {
+  main {
+    border-left: none;
+    margin: 0 0.25rem;
+    margin-top: 1rem;
+    padding-top: 2.5rem;
+    justify-self: end;
+    max-width: calc(100% - 19%);
+  }
+
+  footer {
+    max-width: calc(100% - 19%);
+    border-left: none;
+    margin: 0 0.25rem;
+    justify-self: end;
   }
 }
