--- a/static/global.css
+++ b/static/global.css
@@ -1,19 +1,19 @@
 @font-face {
-  font-family: Archivo;
-  src: url(/font/Archivo-VariableFont_wdth\,wght.woff2);
+  font-family: "Archivo";
+  src: url("./font/Archivo-Variable.woff2");
   font-display: swap;
 }
 
-@font-face {
-  font-family: "Archivo";
+/* @font-face {
+  font-family: "Archivo Italic";
   font-display: swap;
-  src: url("/font/archivo-v19-latin-regular.woff2") format("woff2");
-}
+  src: url("/font/Archivo-Italic-Variable.woff2") format("woff2");
+} */
 
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
   font-family: "Martian Mono";
-  src: url("/font/martian-mono-v3-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("/font/MartianMono.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
 * {
