installed a library for optimizing the speed of the images

--- a/static/global.css
+++ b/static/global.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Archivo";
-  src: url("./font/Archivo-Variable.woff2");
+  src: url("/font/Archivo-Variable.woff2");
   font-display: swap;
 }
 
