--- a/static/global.css
+++ b/static/global.css
@@ -1,14 +1,13 @@
 @font-face {
   font-family: "Archivo";
-  /*src: url("./font/Archivo-Variable.woff2");*/
   src: url("./font/Archivo-Variable.woff2");
   font-display: swap;
 }
 
 @font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-display: swap;
   font-family: "Martian Mono";
-  src: url("./font/MartianMono.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  src: url("./font/MartianMono.woff2") format("woff2");
 }
 
 * {
@@ -94,7 +93,7 @@ button:focus-visible {
   letter-spacing: -0.25px;
 }
 
-@media (max-width: 35em) {
+@media (width <= 35em) {
   h1 {
     font-size: 3rem;
     line-height: 100%;
@@ -128,12 +127,42 @@ button:focus-visible {
 
 main {
   line-height: 1.5;
-  /*padding: 2rem;*/
-  border-bottom: 1px solid var(--black);
 }
 
+footer {
+  border-top: 1px solid var(--black);
+}
 
-@media (width >= 43rem) {
+/** Layout Styling */
+
+main {
+  max-width: 100vw;
+}
+
+@media (width >= 50rem) {
+  .main-container {
+    display: grid;
+    grid-template-columns: 17% 83%;
+    grid-template-rows: auto;
+  }
+
+  header {
+    grid-column: 1;
+  }
+
+  main {
+    grid-column: 2;
+    border-left: 1px solid var(--black);
+
+  }
+
+  footer {
+    position: relative; /* Default position */
+    grid-column: 1 / 3;
+    z-index: 1; /* Ensure it's below the header */
+  }
+
+/* @media (width >= 43rem) {
   header,
   main,
   footer {
@@ -172,4 +201,4 @@ main {
     margin: 0 0;
     justify-self: end;
   }
-}
+} */
